add project details table

--- a/approach.tex
+++ b/approach.tex
@@ -15,6 +15,42 @@ To complement the data necessary to our study, we extract from the Chrome Releas
  
 In order to have all the source code available we clone Chromium Git repository. 
 
+\begin{table*}[!hbt]
+      \begin{center}
+            \caption{Project details}
+            \label{tab:project_details}
+            \begin{tabular}{l| c c c c c}
+            \toprule
+            \textbf{Release}  & \textbf{Tag} & \textbf{Date} & \textbf{\# of commits} & \textbf{\# of Bug Reported} & \textbf{\# of Bug Fixed} \\ \midrule 
+              1               & 1.0.154.36    & 2008-12-11   &    7705                &         1964                &      1014 \\
+              2               & 2.0.172.28    & 2009-05-21   &    8015                &         3061                &      2493 \\
+              3               & 3.0.195.21    & 2009-09-15   &    8583                &         4542                &      3669 \\
+              4               & 4.0.249.78    & 2010-01-25   &    8045                &         3799                &      3710 \\
+              5               & 5.0.375.55    & 2010-05-25   &    7603                &         3590                &      3464 \\
+              6               & 6.0.472.53    & 2010-09-02   &    3457                &         1739                &      1696 \\
+              7               & 7.0.517.43    & 2010-10-19   &    3376                &         1624                &      1423 \\
+              8               & 8.0.552.215   & 2010-12-02   &    3990                &         1850                &      1703 \\
+              9               & 9.0.597.84    & 2011-02-03   &    2703                &         1210                &      1191 \\
+             10               & 10.0.648.127  & 2011-03-08   &    4671                &         1992                &      1833 \\
+             11               & 11.0.696.57   & 2011-04-27   &    4083                &         1606                &      1587 \\
+             12               & 12.0.742.91   & 2011-06-07   &    5198                &         2511                &      2263 \\
+             13               & 13.0.782.107  & 2011-08-02   &    4541                &         1999                &      2082 \\
+             14               & 14.0.835.163  & 2011-09-16   &    4077                &         2398                &      1840 \\
+             15               & 15.0.874.102  & 2011-10-25   &    5505                &         2900                &      2814 \\
+             16               & 16.0.912.63   & 2011-12-13   &    5036                &         3033                &      2670 \\
+             17               & 17.0.963.46   & 2012-02-08   &    6624                &         3365                &      3775 \\
+             18               & 18.0.1025.142 & 2012-03-28   &    5798                &         3537                &      3098 \\
+             19               & 19.0.1084.52  & 2012-05-15   &    5395                &         2895                &      3141 \\
+             20               & 20.0.1132.43  & 2012-06-26   &    3865                &         2211                &      2174 \\
+             21               & 21.0.1180.57  & 2012-07-31   &    7187                &         4012                &      4337 \\
+             22               & 22.0.1229.79  & 2012-09-25   &    5247                &         2808                &      2927 \\
+             23               & 23.0.1271.83  & 2012-11-02   &    7967                &         4108                &      4614 \\
+             24               & 24.0.1312.52  & 2013-01-10   &    5707                &         2753                &      3541 \\
+             25               & 25.0.1364.97  & 2013-02-21   &    5009                &         2129                &      3019 \\ \bottomrule
+            \end{tabular}
+      \end{center}
+\end{table*}
+
 \subsection{Process data and find attributes}
 
 After the extraction we process the data and search for attributes that will help us in our analysis. 
@@ -54,3 +90,4 @@ In this section we describe the metrics used in our study. All of the metrics ar
 \textbf{Total number of files changed:} This is the total number of files that were changed in the current analyzed version. 
 
  We selected these metrics based on the analysis of our three research questions that we cover in detail in the next section.
+
