--- a/bib.bib
+++ b/bib.bib
@@ -127,6 +127,17 @@ keywords={operating systems (computers);program debugging;software engineering;M
 doi={10.1109/ICSE.2012.6227112}, 
 ISSN={0270-5257},}
 
+@INPROCEEDINGS{mockus2010ICSM, 
+author={Mockus, A. and Fielding, R.T. and Herbsleb, J.}, 
+booktitle={Software Engineering, 2000. Proceedings of the 2000 International Conference on}, 
+title={A case study of open source software development: the Apache server}, 
+year={2000}, 
+month={}, 
+pages={263-272}, 
+keywords={search engines;software engineering;software process improvement;Apache web server;code ownership;defect density;email archives;open source software development;productivity;Application software;Computer aided software engineering;Computer science;History;Job shop scheduling;Open source software;Productivity;Programming;System-level design;Web server}, 
+doi={10.1109/ICSE.2000.870417}, 
+ISSN={0270-5257},}
+
 @misc{chrome_releases,
   title = {Chrome Releases},
   howpublished = {\url{http://googlechromereleases.blogspot.ca/}},
