add rq3 and conclusion

--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,15 @@
+@ARTICLE{Lim2012Software, 
+author={Lim, E. and Taksande, N. and Seaman, C.}, 
+journal={IEEE Software}, 
+title={A Balancing Act: What Software Practitioners Have to Say about Technical Debt}, 
+year={2012}, 
+month={Nov}, 
+volume={29}, 
+number={6}, 
+pages={22-27}
+}
+
+
 @inproceedings{Chen2014MSR,
  author = {Chen, Tse-Hsun and Nagappan, Meiyappan and Shihab, Emad and Hassan, Ahmed E.},
  title = {An Empirical Study of Dormant Bugs},
