--- a/introduction.tex
+++ b/introduction.tex
@@ -1,9 +1,17 @@
-Software system becomes more important each passing day and the effort to produce good and successful software projects increases at the same pace. In an ideal world,  a project  should be delivered on time, inside the budget and with high quality. We know by experience that is very  difficult to balance these elements, and they are mostly likely to be indirectly proportional. Quality is very important though, and many approaches have been proposed to ensure software quality. However there is always a tradeoff between quality and and resources. For example, developers often take shortcuts to meet release deadlines, fix last minute bugs, etc.
+Software system becomes more important each passing day and the effort to produce good and successful software projects increases at the same pace. In an ideal world a project  should be delivered on time, inside the budget and with high quality. We know by experience that is very  difficult to balance these elements, and they are mostly likely to be indirectly proportional. Quality is very important though, and many approaches have been proposed to ensure software quality. However there is always a tradeoff between quality and and resources. For example, developers often take shortcuts to meet release deadlines, fix last minute bugs, etc.
 
-A new area that studies this phenomena is Technical Debt. The term technical debt is used to express faults and non-optimal solutions that are taken conscientiously in a software project in order to achieve a short term goals. Usually  this decisions allows the project to move faster towards its goal but there will be an increased cost to maintain this software in the long run. Prior work showed that technical debt is unavoidable and that there is different types of technical debt, like design debt, test debt, documentation debt, defect debt, etc. 
+A new area that studies this phenomena is Technical Debt. The term technical debt is used to express faults and non-optimal solutions that are taken conscientiously in a software project in order to achieve short term goals. Usually  this decisions allows the project to move faster towards its goal but there will be an increased cost to maintain this software in the long run. Prior work \cite{Lim2012Software} showed that technical debt is unavoidable and that there is different types of technical debt, like design debt, test debt, documentation debt, defect debt, etc.  
 
 The technical debt metaphor is widely used in industry and the research in this area is expanding as well. However, in topics like defect debt, different works has a divergent opinion. Some studies says that defect technical debt does not exists \cite{Kruchten2013GSOFT} as in the other hand, there are studies supporting the existence of defect technical debt \cite{Seaman201125}. We argue that there are different kinds of defects in a project, and that some of them can be characterized as defect technical debt, although not all of defects are necessarily  a defect technical debt. 
 
-We conjecture that there are defects that are urgent and treated as so, they get fixed right away. These defects (or Bugs) do not represent a defect debt as it is not incurring interest(increasing the effort of maintenance) in the project in a long run. There are defects that are identified during a release but they are not critical enough to get fixed right away, they stick around for a couple of releases and eventually get fixed. We consider these kind of defects as defect technical debt. Finally there is reported defects that never get fix , intentionally (the project developers knows the defect and refuses to fix it), or unintentionally, the defect was reported but was abandoned. 
+Our goal is to understand, characterize and model Defect Debt, being able to distinguish Defect Debt from other Bugs.
 
-Our goal is to understand, characterize and model the different types of defects found in software projects, being able to predict and measure how much of defect technical debt there are in a project. We also believe that our work can clarify the matter in hand, and provide a better definition to what is defect technical debt. 
+In this paper, we extract more than 139,000 commits and analyze more than 67,000 bug reports from one large open source software. We performe a empiracal study on Google Chrome to answer our research questions. 
+
+Fisrt, we analyze 25 releases from Chrome grouping the number of reported bugs and fixed bugs for each one of them. Based on the result of this analysis we found a pattern that can categorize Defect Debt and Bugs. We found that Bugs are more urgent defects, that are fixed in the same release as reported or in the immediatly next one. However, Defect debt lingers in the system for a long time, but eventually get fixed. In the analyzed project the avarage percentage of Bugs are of 69.55\% and Defect Debt is of 30.44\%.
+
+Second, we analyze the total number of open bugs in the system and the number of Defect Debt. Then we classify the commits accordingly with their intention. We use this information in to undertand how Defect Debt impacts the addition of new features. Based on our result we find that there is no direct negative relation between the number of Defect Debt and the addition of new features. 
+
+Third, we collect several metrics and propose a model to Defect Debt, we find that it is possible to build such a model, but it is necessary to treat the data in a more granular level (i.e., file level). 
+
+The rest of the paper is organized as follows: Section~\ref{sec:related_work} presents the related work, followed by Section~\ref{sec:approach} that details our approach. We present our case study results in Section~\ref{sec:results}. The threats to validity of our work are discussed in Section~\ref{sec:threats_to_validity}. Section~\ref{sec:conclusion} lists the ours conclusions and future work. 
